<resources>
    <string name="app_name">Mood Diary</string>

    <!-- Emotion subscription key -->
    <!-- Please refer to https://www.projectoxford.ai/ to get your subscription key -->
    <!-- If you have one subscription key, you can add it here to use the service -->
    <string name="subscription_key">965054ae9ba347afa73b3da2d3ef82dc</string><!-- Face subscription key -->
    <!-- Please refer to http://oxford-portal.azurewebsites.net/doc/general/subscription-key-mgmt to get your subscription key
    --><!-- Please note that the Emotion API and Face API have different subscription keys
--><!-- You will need Face subscription key, besides the Emotion subscription keys, for the second part of the sample to work
--><string name="faceSubscription_key">558bb404218241a2a3f8d27e521075f2</string>

    <!-- Display strings -->
    <string name="add_subscription_key_tip_title">Subscription Key is Needed</string>
    <string name="add_subscription_key_tip">Please put your two subscription keys for Emotion API/Face API to source file \"app/res/values/strings.xml\" to enable Emotion API and Face API calls.</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_analyze">AnalyzeActivity</string>
    <string name="title_activity_recognize">RecognizeActivity</string>
    <string name="title_activity_thumbnail">ThumbnailActivity</string>

    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>

    <!-- Bottom -->
    <string name="tool_home">Home</string>
    <string name="tool_analysis">Analysis</string>
    <string name="tool_picture">Picture</string>
    <string name="tool_me">Me</string>

    <!-- Home -->
    <string name="weather">Weather: </string>
    <string name="mood">Mood: </string>
    <string name="introduction">Introduction: </string>

    <!--Picture-->
    <string name="picture_title">My Life</string>
    <string name="date">XX.XX</string>


</resources>
