<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="378dp"
            android:layout_weight="0.58"
            android:background="#FFFFFF">

            <!-- 上部-->
            <TextView
                android:id="@+id/weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="71dp"
                android:text="@string/weather"
                android:autoText="false"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/weather"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="31dp"
                android:text="@string/mood"
                android:textSize="20dp" />

            <ImageButton
                android:id="@+id/takePhoto"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:background="#FFFFFF"
                android:scaleType="centerInside"
                android:src="@mipmap/photo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="33dp"
                android:text="@string/introduction"
                android:textSize="20dp" />

        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/bottom_layout" />

</RelativeLayout>